hphp/hack/test/typecheck/shape_idx3.php.like_types.exp
File "shape_idx3.php", line 14, characters 3-28:
  ~arraykey
File "shape_idx3.php", line 15, characters 3-28:
  ~arraykey
File "shape_idx3.php", line 16, characters 3-36:
  ~arraykey
File "shape_idx3.php", line 17, characters 3-36:
  ~arraykey
File "shape_idx3.php", line 21, characters 10-34:
Invalid return type (Typing[4110])
File "shape_idx3.php", line 13, characters 4-6:
Expected int
File "shape_idx3.php", line 21, characters 10-34:
But got dynamic because it is an unenforceable type
